--- a/apiserver/modules/apex/apex-sandbox-deploy-1.yaml
+++ b/apiserver/modules/apex/apex-sandbox-deploy-1.yaml
@@ -11,7 +11,7 @@ spec:
     spec:
       containers:
       - name: apexsandbox2
-        image: apacheapex/sandbox2:v0.1.2 
+        image: apexsandbox2:v0.1.2 
         ports:
         - containerPort: 8088
         - containerPort: 50070
