--- a/ui/BDPaaS/nbproject/private/private.properties
+++ b/ui/BDPaaS/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\A40385\\AppData\\Roaming\\NetBeans\\8.1\\config\\GlassFishEE6\\Properties\\gfv3-1258027164.properties
+deploy.ant.properties.file=C:\\Users\\A40385\\AppData\\Roaming\\NetBeans\\8.1\\config\\GlassFishEE6\\Properties\\gfv31062330036.properties
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/glassfish3/glassfish/domains/domain1
 j2ee.server.home=C:/glassfish3/glassfish
-j2ee.server.instance=[C:\\glassfish3\\glassfish]deployer:gfv3ee6wc:10.205.50.19:4848
+j2ee.server.instance=[C:\\glassfish3\\glassfish]deployer:gfv3ee6wc:61.66.218.221:4848
 j2ee.server.middleware=C:/glassfish3
 javac.debug=true
 javadoc.preview=true
